# deepfake-detection

./: MTCNN.py  README.md  deepfake detection project (DenseNet121 on dataset 1).ipynb
DeepFake Detection/: deepfake-detection (densenet121 on dataset 2).ipynb  deepfake-detection-project-xception-bi-lstm.ipynb  ui.py
Video_Player/: CMakeLists.txt  deepfake_api.py  main.py  requirements.txt  test.py
